--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(MiniCollider VERSION 1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
-find_package (Boost)
+find_package(Boost)
 
-add_executable(dsp rt/dsp.cc)
-target_link_libraries(dsp gccjit)
+add_executable(engine engine/dsp.cc)
+target_link_libraries(engine gccjit)
